# Testre

./: .gitattributes  .gitignore  .gitmodules  CAMERA_PIPELINE_FIXES.md  CLAUDE.md  CLAUDE_AUDIT.md  CLAUDE_PIPELINE.md  my-asking.md  tidy-bouncing-phoenix.md
.github/workflows/: ci.yml
context/: 00-INDEX.md  01-architecture.md  02-pipeline.md  03-glossary.md  04-env-vars.md  10-cloud-api.md  11-modal-training.md  12-supabase.md  13-frontend-react.md  14-windows-gui.md  15-docker.md  16-installer-wsl.md  17-ros2-stack.md  18-modal-mcp.md  19-roboter-studio.md  20-operations.md  21-known-issues.md  22-frontend-followups.md  23-rollout-accounts.md  WORKFLOW-add-feature.md  WORKFLOW-debug.md  WORKFLOW-overlay-change.md  WORKFLOW-replace-or-upgrade.md  WORKFLOW-supabase-migration.md  WORKFLOW.md
docs/: JETSON_DEPLOY.md  ROBOTER_STUDIO_DEFERRED.md
docs/arm64_base/: README.md
docs/deploy/: APPLY_MIGRATIONS.sql  DEPLOY.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_PLAYBOOK.md  NEXT_STEPS.md  ROLLBACK_MIGRATIONS.sql
open_manipulator/docker/: Dockerfile  docker-compose.yml
physical_ai_tools/docker/: docker-compose.yml
physical_ai_tools/physical_ai_bt/: CHANGELOG.rst  package.xml  setup.py
physical_ai_tools/physical_ai_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
physical_ai_tools/physical_ai_interfaces/msg/: Detection.msg  SensorSnapshot.msg  WorkflowStatus.msg
physical_ai_tools/physical_ai_interfaces/srv/: AutoPoseSuggest.srv  CalibrationCaptureColor.srv  CalibrationCaptureFrame.srv  CalibrationHistory.srv  CalibrationPreview.srv  CalibrationSolve.srv  CalibrationStatus.srv  CancelCalibration.srv  ExecuteCalibrationPose.srv  MarkDestination.srv  StartCalibration.srv  StartWorkflow.srv  StopWorkflow.srv  VerifyCalibration.srv  WorkflowContinue.srv  WorkflowPause.srv  WorkflowSetBreakpoints.srv  WorkflowStep.srv
physical_ai_tools/physical_ai_manager/: .dockerignore  .env.example  .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile.web  nginx.conf  nginx.web.conf.template  package-lock.json  package.json  tailwind.config.js  vercel.json
physical_ai_tools/physical_ai_server/: CHANGELOG.rst  Dockerfile.amd64  Dockerfile.arm64  package.xml  setup.py
physical_ai_tools/physical_ai_tools/: CHANGELOG.rst  package.xml
physical_ai_tools/rosbag_recorder/: package.xml
robotis_ai_setup/: .gitattributes  .gitignore  CHANGES_SESSION_2026-04-06.md  CHANGES_SESSION_2026-04-17.md  FRONTEND_UX_FOLLOWUPS.md  OPERATIONS_RUNBOOK.md  ROLLOUT_ACCOUNTS.md  build_release.ps1
robotis_ai_setup/cloud_training_api/: .env.example  Dockerfile  requirements.txt
robotis_ai_setup/docker/: .env.template  BASE_IMAGE_PINNING.md  build-images.sh  bump-upstream-digests.sh  docker-compose.gpu.yml  docker-compose.yml
robotis_ai_setup/gui/: build.spec  main.py  requirements.txt
robotis_ai_setup/installer/: robotis_ai_setup.iss
robotis_ai_setup/jetson_agent/: agent.py  docker-compose.jetson.yml  (+3 more)
tools/: classroom_kit_README.md  dfine_finetune.md  generate_apriltags.py  generate_charuco.py  generate_gripper_adapter.py  gripper_charuco_adapter.stl  perception_eval.md
(+335 files in other folders)
